--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@varlet/ui": "^2.0.2",
     "axios": "^1.1.2",
     "vue": "^3.2.37"
   },
